# cen64-qt

./: .travis.yml  CMakeLists.txt  README.md  cen64-qt.pro
build-scripts/: revision.sh  travis-ci.sh
build-scripts/platform/: linux.sh  osx.sh  windows.sh
macosx/: cen64.icns
resources/: README.txt  cen64-qt.6  cen64-qt.desktop  cen64qt.qrc
resources/locale/: cen64-qt_fr.qm  cen64-qt_fr.ts  cen64-qt_ru.qm  cen64-qt_ru.ts
src/: aboutdialog.cpp  aboutdialog.h  cen64qt.cpp  cen64qt.h  common.cpp  common.h  ddview.cpp  ddview.h  downloaddialog.h  emulatorhandler.cpp  emulatorhandler.h  global.h  gridview.cpp  listview.cpp  logdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  pathsdialog.cpp  pathsdialog.h  romcollection.cpp  romcollection.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tableview.cpp  tableview.h  thegamesdbscraper.cpp  thegamesdbscrapper.cpp  v64converter.cpp  v64converter.h
src/dialogs/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  v64converter.cpp  v64converter.h
src/emulation/: emulatorhandler.cpp  emulatorhandler.h
src/roms/: romcollection.cpp  romcollection.h
src/views/: ddview.cpp  ddview.h
windows/: icon.rc
